25/01 Se implemento el perfil

--- a/Policheck/Policheck.csproj
+++ b/Policheck/Policheck.csproj
@@ -9,7 +9,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="fotoperfil.png" />
+    <None Remove="Views\fotoperfil.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MySql.Data" Version="9.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="fotoperfil.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Views\fotoperfil.png" />
   </ItemGroup>
 
 </Project>
