--- a/Policheck/Policheck.csproj
+++ b/Policheck/Policheck.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="9.1.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
