21/02 Puesto el logo y cambiado el login

--- a/Policheck/Policheck.csproj
+++ b/Policheck/Policheck.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <None Remove="fotoperfil.png" />
+    <None Remove="Imagenes\LogoPolicheck.png" />
     <None Remove="Views\fotoperfil.png" />
   </ItemGroup>
 
@@ -20,6 +21,9 @@
 
   <ItemGroup>
     <Resource Include="fotoperfil.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Imagenes\LogoPolicheck.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Views\fotoperfil.png" />
