--- a/Policheck/Policheck.csproj
+++ b/Policheck/Policheck.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <None Remove="fotoperfil.png" />
+    <None Remove="Imagenes\imagenfondo2.png" />
     <None Remove="Imagenes\LogoPolicheck.png" />
     <None Remove="Views\fotoperfil.png" />
   </ItemGroup>
@@ -21,6 +22,9 @@
 
   <ItemGroup>
     <Resource Include="fotoperfil.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Imagenes\imagenfondo2.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Imagenes\LogoPolicheck.png">
